[package]
name = "linear_templater"
version = "0.1.3"
edition = "2021"
authors = ["Alan Vardy <alan@vardy.cc>"]
license = "MIT"
description = "Create Linear Tickets from TOML files"
readme = "README.md"
homepage = "https://github.com/alanvardy/linear_templater"
repository = "https://github.com/alanvardy/linear_templater"
keywords = ["cli", "linear", "client", "toml"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = "4.3.11"
colored = "2.0.4"
toml = "0.7.5"
walkdir = "2.3.3"
handlebars = "4.3.7"
